# libneosc

./: LICENSE  Makefile.in  README.md  aclocal.m4  configure  configure.ac
man/: Makefile.am  Makefile.in  neosc_ndef_read_cc.3  neosc_ndef_read_ndef.3  neosc_ndef_select.3  neosc_neo_config.3  neosc_neo_hmac.3  neosc_neo_hotp.3  neosc_neo_otp.3  neosc_neo_passwd.3  neosc_neo_read_hmac.3  neosc_neo_read_ndef.3  neosc_neo_read_otp.3  neosc_neo_read_serial.3  neosc_neo_read_status.3  neosc_neo_read_yubiotp.3  neosc_neo_reset.3  neosc_neo_select.3  neosc_neo_setmode.3  neosc_neo_swap.3  neosc_neo_update.3  neosc_neo_write_ndef.3  neosc_neo_write_scanmap.3  neosc_neo_yubiotp.3  neosc_oath_add.3  neosc_oath_calc_all.3  neosc_oath_calc_single.3  neosc_oath_chgpass.3  neosc_oath_delete.3  neosc_oath_list_all.3  neosc_oath_reset.3  neosc_oath_select.3  neosc_oath_unlock.3  neosc_pbkdf2.3  neosc_pcsc_apdu.3  neosc_pcsc_close.3  neosc_pcsc_lock.3  neosc_pcsc_open.3  neosc_pcsc_unlock.3  neosc_pgp_select.3  (+42 more)
patches/: LICENSE.patch  README  gnupg-2.0.27-pkcs11_reader_match.patch  gnupg-2.0.27-scd_shared.patch  openssh-6.8p1-key_select.patch  openssh-6.9p1-key_select.patch  openssh-7.1_p1-key_select.patch  openssh-7.4_p1-key_select.patch  openssh-7.9_p1-key_select.patch
src/: Makefile.am  Makefile.in  libneosc.h  ndefapp.c  neoapp.c  oathapp.c  pbkdf2.c  pcsc.c  pgpapp.c  pivapp.c  sha1.c  usb.c  util.c
